Tests/Positive/PointerArithmetic.mr
fun main(): i32 {
    var p: *i32;
    p += 1;
    return 0;
}
