Tests/Negative/NothPointerArithmetic.mr
fun main(): i32 {
    var p: *noth;
    p += 1; // Error: Size of 'noth' is unknown
    return 0;
}
